/**
 * Copyright (c) 2015 - The CM Authors <legal@clickmatcher.com>
 *   All Rights Reserved.
 *
 * This file is CONFIDENTIAL -- Distribution or duplication of this material or
 * the information contained herein is strictly forbidden unless prior written
 * permission is obtained.
 */
package cm;

enum TableType {
  TBL_LOGTABLE = 0;
  TBL_STATIC = 1;
};

message TableDefinition {

  required string customer = 1;

  required string table_name = 2;

  required TableType type = 5;

  optional string schema_name = 3;

  optional bytes schema_inline = 4;

  optional uint64 num_shards = 6;

};
